# monkeyplug

./: .gitignore  .monkeyplug.json.example  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/monkeyplug/: groq_config.py  monkeyplug.py  separation.py
src/monkeyplug/data/: profanity_list.json
