[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monkeyplug"
version = "2.2.0"
authors = [
  { name="Seth Grover", email="mero.mero.guero@gmail.com" },
]
description = "monkeyplug is a script to censor profanity in audio files using speech recognition with Groq API and instrumental splicing support."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech"
]
dependencies = [
    "mmguero==2.0.3",
    "mutagen==1.47.0",
    "requests==2.32.5",
    "groq>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/mmguero/monkeyplug"
Issues = "https://github.com/mmguero/monkeyplug/issues"
Repository = "https://github.com/mmguero/monkeyplug.git"

[tool.hatch.build]
include = [
    "src/monkeyplug/**/*.py",
    "src/monkeyplug/data/*.json",
]

[project.scripts]
monkeyplug = "monkeyplug:RunMonkeyPlug"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
