[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monkeyplug-enhanced"
version = "2.3.0"
authors = [
  { name="Seth Grover", email="mero.mero.guero@gmail.com" },
  { name="Lincoln Brown", email="link@brown.fm" },
]
description = "Enhanced fork of monkeyplug — censors profanity in audio files using speech recognition with Groq API, AI instrumental generation, and batch processing."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Speech"
]
dependencies = [
    "mmguero==2.0.3",
    "mutagen==1.47.0",
    "requests==2.32.5",
    "groq>=0.1.0",
    "sherpa-onnx>=1.10.0",
    "numpy>=1.24.0",
    "soundfile>=0.12.0",
    "tqdm>=4.65.0",
    "shazamio>=0.8.0",
    "aiohttp>=3.9.0",
    "duckduckgo-search>=6.0.0",
    "spotify-scraper>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/ljbred08/monkeyplug"
Issues = "https://github.com/ljbred08/monkeyplug/issues"
Repository = "https://github.com/ljbred08/monkeyplug.git"

[tool.hatch.build]
include = [
    "src/monkeyplug/**/*.py",
    "src/monkeyplug/data/*.json",
]

[tool.hatch.build.targets.wheel]
packages = ["src/monkeyplug"]

[tool.hatch.build.targets.wheel.shared-data]
"src/monkeyplug/data" = "monkeyplug/data"

# Ensure editable installs use the src directory directly
[tool.hatch.build.targets.editable]
packages = ["src/monkeyplug"]
shared-data = {"src/monkeyplug/data" = "monkeyplug/data"}

[project.scripts]
monkeyplug = "monkeyplug:RunMonkeyPlug"

[tool.pytest.ini_options]
pythonpath = "src"
addopts = [
    "--import-mode=importlib",
]
